test/integration/bad/laplace_marginal/stanc.expected
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility1.stan
Semantic error in 'autodiff_incompatibility1.stan', line 67, column 29 to column 40:
   -------------------------------------------------
    65:    eta ~ normal(0, 1);
    66:  
    67:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    68:                                    theta_0,
    69:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

The likelihood function passed to the laplace_marginal family of functions
requires the ability to compute higher-order derivatives.
The function 'algebra_solver', called by this function, is currently unsupported.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility2.stan
Semantic error in 'autodiff_incompatibility2.stan', line 75, column 45 to column 56:
   -------------------------------------------------
    73:  
    74:  generated quantities {
    75:    vector[n_obs] theta = laplace_marginal_rng(ll_function, (eta, log_ye, y),
                                                      ^
    76:                          theta_0,
    77:                          K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

The likelihood function passed to the laplace_marginal family of functions
requires the ability to compute higher-order derivatives.
The function 'ode_rk45', called by this function, is currently unsupported.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback1.stan
Semantic error in 'bad_callback1.stan', line 49, column 29 to column 40:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not meet criteria for this argument to 'laplace_marginal':
Expected function returning real but got function returning void.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback2.stan
Semantic error in 'bad_callback2.stan', line 50, column 29 to column 49:
   -------------------------------------------------
    48:    eta ~ normal(0, 1);
    49:  
    50:    target += laplace_marginal(ll_function_jacobian, (eta, log_ye, y),
                                      ^
    51:                                    theta_0,
    52:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function_jacobian' does not meet criteria for this argument to 'laplace_marginal':
Expected a pure function but got a _jacobian function.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback3.stan
Semantic error in 'bad_callback3.stan', line 41, column 29 to column 40:
   -------------------------------------------------
    39:  
    40:    real ll_function;
    41:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    42:                                    theta_0,
    43:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

A returning function was expected but a non-function value 'll_function' was supplied.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback4.stan
Semantic error in 'bad_callback4.stan', line 49, column 29 to column 40:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not meet criteria for this argument to 'laplace_marginal':
The first argument is marked data-only. (Local variables are assumed to
depend on parameters; same goes for function inputs unless they are marked
with the keyword 'data'.)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback5.stan
Semantic error in 'bad_callback5.stan', line 49, column 29 to column 40:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not meet criteria for this argument to 'laplace_marginal':
The first argument must be vector but got complex_vector.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward1.stan
Semantic error in 'bad_forward1.stan', line 49, column 42 to column 47:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, {2.0},
                                                   ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Forwarded arguments to 'll_function' in call to 'laplace_marginal' must be a tuple.
Instead found type array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward2.stan
Semantic error in 'bad_forward2.stan', line 49, column 42 to column 58:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, y, log_ye),
                                                   ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Cannot call 'll_function' with arguments forwarded from call to
'laplace_marginal':
The third argument must be vector but got array[] int.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward3.stan
Semantic error in 'bad_forward3.stan', line 49, column 42 to column 50:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, y),
                                                   ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Cannot call 'll_function' with arguments forwarded from call to
'laplace_marginal':
Expected 4 arguments but got 3 arguments.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward4.stan
Semantic error in 'bad_forward4.stan', line 51, column 46 to column 61:
   -------------------------------------------------
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
    50:                                    theta_0,
    51:                                    K_function, (x, alpha, rho));
                                                       ^
    52:  }
   -------------------------------------------------

Cannot call 'K_function' with arguments forwarded from call to
'laplace_marginal':
Expected 4 arguments but got 3 arguments.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args1.stan
Semantic error in 'missing_args1.stan', line 2, column 12 to column 30:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal'.
The valid signature of this function is
laplace_marginal((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...))
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args2.stan
Semantic error in 'missing_args2.stan', line 2, column 12 to column 34:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol'.
The valid signature of this function is
laplace_marginal_tol((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), data real, data int, data int, data int,
  data int)
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args3.stan
Semantic error in 'missing_args3.stan', line 2, column 12 to column 58:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_neg_binomial_2_log_lpmf();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_neg_binomial_2_log_lpmf' for the likelihood:
Expected 3 arguments but got 0 arguments.
Expected the arguments to start with:
(array[] int, array[] int, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args4.stan
Semantic error in 'missing_args4.stan', line 42, column 12 to line 43, column 42:
   -------------------------------------------------
    40:    eta ~ normal(0, 1);
    41:  
    42:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                     ^
    43:                                    theta_0);
    44:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal'.
The valid signature of this function is
laplace_marginal((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...))
However, we recieved the types:
((vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int), data vector)
Typechecking failed after checking the first two arguments. Please ensure you
are passing enough arguments and that the fourth is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args5.stan
Semantic error in 'missing_args5.stan', line 65, column 24 to column 46:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:    vector[n_obs] theta = laplace_marginal_rng();
                                 ^
    66:  
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_rng'.
The valid signature of this function is
laplace_marginal_rng((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), tuple(T2...))
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args6.stan
Semantic error in 'missing_args6.stan', line 65, column 22 to line 66, column 14:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:  vector[n_obs] theta = laplace_marginal_rng(ll_function, (eta, log_ye, y),
                               ^
    66:        theta_0);
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_rng'.
The valid signature of this function is
laplace_marginal_rng((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), tuple(T2...))
However, we recieved the types:
(data (vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int), data vector)
Typechecking failed after checking the first two arguments. Please ensure you
are passing enough arguments and that the fourth is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args7.stan
Semantic error in 'missing_args7.stan', line 65, column 24 to line 66, column 30:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:    vector[n_obs] theta = laplace_marginal_neg_binomial_2_log_rng(y, {1}, [1.0]',
                                 ^
    66:                        theta_0);
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_neg_binomial_2_log_rng'.
The valid signature of this function is
laplace_marginal_neg_binomial_2_log_rng(array[] int, array[] int, vector,
  vector, (...) => matrix, tuple(...), tuple(...))
However, we recieved the types:
(data array[] int, data array[] int, data vector, data vector)
Typechecking failed after checking the first 3 arguments.
Please ensure you are passing enough arguments and that the 5th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args8.stan
Semantic error in 'missing_args8.stan', line 2, column 12 to column 59:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_poisson_log_lpmf({1}, {1});
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_poisson_log_lpmf'.
The valid signature of this function is
laplace_marginal_tol_poisson_log_lpmf(array[] int, array[] int, vector,
  (...) => matrix, tuple(...), data real, data int, data int, data int, data
  int)
However, we recieved the types:
(data array[] int, data array[] int)
Typechecking failed after checking the first 2 arguments.
Please ensure you are passing enough arguments and that the 4th is a function.
[exit 1]
